# SeedWater

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/water/seed/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: seedwater.cpp
app/src/main/java/com/water/seed/: MainActivity.java  Toast.java
app/src/main/java/com/water/seed/view/: CaptureView.java  ZoomImageView.java
app/src/main/res/drawable/: button_choose.xml  button_select.xml  button_shap.xml  dmax_spots_spot.xml  selector_flag_light.xml  selector_flag_modify.xml  selector_login_reg_btn_bg.xml  shap.xml  shape_login_reg_btn_bg.xml  shape_login_reg_btn_bg_pressed.xml  shape_reg_edit_bg.xml
app/src/main/res/layout/: activity_main.xml  view_main_menu_1.xml  view_main_menu_2.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/water/seed/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
